--- a/src/pages/Ledger/components/Record.module.scss
+++ b/src/pages/Ledger/components/Record.module.scss
@@ -4,6 +4,7 @@
     background-color: color(white);
     position: relative;
     display: block;
+    width: 100%;
     & + & {
         &:after {
             content: '';
@@ -63,6 +64,7 @@
 .detail {
     @include font(callout);
     color: color(grey, 5);
+    overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
